<resources>
    <string name="app_name">GuessingGame</string>
    <string name="Pergunta">Pergunta</string>
    <string name="RespostaA">Essa</string>
    <string name="RespostaB">Ou Essa</string>
    <string name="RespostaC">Talves essa</string>
    <string name="RespostaD">Será</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="todo">TODO</string>
    <string name="imagemTopo">ImagemTopo</string>
    <string name="Voltar">Voltar</string>
    <string name="Acertou">Nome</string>
    <string name="Pontuacao">2</string>
    <string name="menu">Menu</string>
    <string name="todo2">TODO</string>
    <string name="sobre">Sobre</string>
    <string name="integrantes">Carolina Limeres \n Mateus Stefens \n Raquel Allen</string>
    <string name="curso"><b>Curso: </b> Computação Movel e na Nuvel</string>
    <string name="ctesp"><b>CTeSP</b> - Tecnologias e Programação de Sistemas de Informação</string>
    <string name="nomes1">Nomes:</string>
    <string name="novo">Novo</string>
    <string name="record">Record</string>
    <string name="sobre1">Sobre</string>
    <string name="todo3">TODO</string>
    <string name="todo4">TODO</string>
    <string name="todo5">TODO</string>
    <string name="menu1">Menu</string>
    <string name="pena">Que pena:</string>
    <string name="errou">Errou, sua pontuação é:</string>
    <string name="todo6">TODO</string>
    <string name="continuar">Parabéns, voce acertou!!</string>
    <string name="menu3">Menu</string>
    <string name="terminou">Parabéns!!!</string>
    <string name="acertoutudo">Acertou todas as perguntas!!!\n A tua pontuação é:</string>
    <string name="continuar2">Continuar</string>
    <string name="menujogo">Menu</string>
    <string name="topo">TODO</string>
    <string name="todo7">TODO</string>
    <string name="som">TODO</string>
    <string name="menunome">Menu</string>
    <string name="insira_o_seu_nome">Insira o seu nome</string>
    <string name="nome">Nome</string>
    <string name="guardar">Guardar</string>
    <string name="pontua_es">Pontuações</string>
    <string name="menurecorde">Menu</string>
    <string name="zerar">Limpar</string>
    <string name="todo8">TODO</string>
    <string name="todo9">TODO</string>
</resources>