<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.Jogo">

    <TextView
        android:id="@+id/Pergunta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/Pergunta"
        android:textColor="#4A148C"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <Button
        android:id="@+id/buttonA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/vermelho"
        android:onClick="A"
        android:text="@string/a"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Pergunta"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/buttonB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/verde"
        android:onClick="B"
        android:text="@string/b"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonA"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/buttonC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/amarelo"
        android:onClick="C"
        android:text="@string/c"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonB"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/buttonD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/azul_bebe"
        android:onClick="D"
        android:text="@string/d"
        android:textAlignment="center"
        android:textColor="#F8F8F8"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonC"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/ResA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        android:text="@string/RespostaA"
        app:layout_constraintStart_toEndOf="@+id/buttonA"
        app:layout_constraintTop_toTopOf="@+id/buttonA"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/ResB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="12dp"
        android:text="@string/RespostaB"
        app:layout_constraintStart_toEndOf="@+id/buttonB"
        app:layout_constraintTop_toTopOf="@+id/buttonB"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/ResC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="12dp"
        android:text="@string/RespostaC"
        app:layout_constraintStart_toEndOf="@+id/buttonC"
        app:layout_constraintTop_toTopOf="@+id/buttonC"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/ResD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/RespostaD"
        app:layout_constraintStart_toEndOf="@+id/buttonD"
        app:layout_constraintTop_toTopOf="@+id/buttonD"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="109dp"
        android:layout_height="95dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/download"
        android:contentDescription="@string/topo" />

    <Button
        android:id="@+id/voltar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="304dp"
        android:backgroundTint="@color/laranja"
        android:onClick="Menu"
        android:text="@string/menujogo"
        android:textAlignment="center"
        android:textColor="#FAFAFA"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageView4"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="640dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/criancas"
        android:contentDescription="@string/todo7" />

    <ImageButton
        android:id="@+id/som"
        android:layout_width="102dp"
        android:layout_height="78dp"
        android:adjustViewBounds="true"
        android:backgroundTintMode="screen"
        android:contentDescription="@string/imagemTopo"
        android:onClick="Som"
        android:padding="20dp"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="@+id/mudo"
        app:layout_constraintStart_toStartOf="@+id/mudo"
        app:srcCompat="@drawable/comsom"
        tools:ignore="DuplicateClickableBoundsCheck,ImageContrastCheck" />

    <ImageButton
        android:id="@+id/mudo"
        android:layout_width="102dp"
        android:layout_height="78dp"
        android:layout_marginBottom="140dp"
        android:adjustViewBounds="true"
        android:backgroundTintMode="screen"
        android:contentDescription="@string/som"
        android:onClick="Mudo"
        android:padding="20dp"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/semsom"
        tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck,DuplicateSpeakableTextCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>