<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <Button
        android:id="@+id/novo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"
        android:backgroundTint="@color/verde"
        android:onClick="Novo"
        android:text="@string/novo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/record"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/teal_200"
        android:onClick="Record"
        android:text="@string/record"
        app:layout_constraintEnd_toEndOf="@+id/novo"
        app:layout_constraintStart_toStartOf="@+id/novo"
        app:layout_constraintTop_toBottomOf="@+id/novo"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/sobre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/laranja"
        android:onClick="Sobre"
        android:text="@string/sobre1"
        app:layout_constraintEnd_toEndOf="@+id/record"
        app:layout_constraintStart_toStartOf="@+id/record"
        app:layout_constraintTop_toBottomOf="@+id/record"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/todo3"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/wallpaper"
        tools:ignore="ImageContrastCheck" />

    <ImageButton
        android:id="@+id/som"
        android:layout_width="102dp"
        android:layout_height="78dp"
        android:layout_marginBottom="32dp"
        android:adjustViewBounds="true"
        android:backgroundTintMode="screen"
        android:contentDescription="@string/todo4"
        android:background="@null"
        android:onClick="Som"
        android:padding="20dp"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/comsom"
        tools:ignore="DuplicateClickableBoundsCheck,DuplicateClickableBoundsCheck,SpeakableTextPresentCheck,ImageContrastCheck,DuplicateSpeakableTextCheck" />

    <ImageButton
        android:id="@+id/mudo"
        android:layout_width="102dp"
        android:layout_height="78dp"
        android:layout_marginBottom="32dp"
        android:adjustViewBounds="true"
        android:backgroundTintMode="screen"
        android:background="@null"
        android:contentDescription="@string/todo5"
        android:onClick="Mudo"
        android:padding="20dp"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/semsom"
        tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>