<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".activities.Recorde">

    <TextView
        android:id="@+id/Recorde"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/pontua_es"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/voltar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginBottom="180dp"
        android:backgroundTint="@color/blue"
        android:onClick="Menu"
        android:text="@string/menurecorde"
        android:textAlignment="center"
        android:textColor="#F3F3F3"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ListView
        android:id="@+id/lista"
        android:layout_width="421dp"
        android:layout_height="386dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/voltar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Recorde"
        app:layout_constraintVertical_bias="0.032" />

    <Button
        android:id="@+id/zerar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="96dp"
        android:backgroundTint="@color/vermelho"
        android:onClick="Zerar"
        android:text="@string/zerar"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/voltar" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="259dp"
        android:layout_height="247dp"
        android:layout_marginStart="160dp"
        android:layout_marginTop="580dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/numero"
        android:contentDescription="@string/todo8" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="304dp"
        android:layout_height="297dp"
        android:layout_marginTop="560dp"
        android:layout_marginEnd="140dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/numeros1"
        android:contentDescription="@string/todo9" />
</androidx.constraintlayout.widget.ConstraintLayout>